# ttrack

./: .gitignore  CMakeLists.txt  community.cpp  community.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  project.cpp  project.h  projectmodel.cpp  projectmodel.h  switch.cpp  switch.h  workperiod.h
src/: CMakeLists.txt  boardmember.cpp  boardmember.h  boardmemberdialog.cpp  boardmemberdialog.h  boardmemberdialog.ui  community.cpp  community.h  communitydelegate.cpp  communitydelegate.h  communitydialog.cpp  communitydialog.h  communitydialog.ui  communitymodel.cpp  communitymodel.h  communityview.cpp  communityview.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  overviewtabdelegate.cpp  overviewtabdelegate.h  overviewtabmodel.cpp  overviewtabmodel.h  overviewtabview.cpp  overviewtabview.h  project.cpp  project.h  projectmodel.cpp  projectmodel.h  reportmodel.cpp  reportmodel.h  streamio.cpp  streamio.h  switch.cpp  switch.h  workperiod.cpp  workperiod.h  workperioddialog.cpp  workperioddialog.h  (+1 more)
